Fixed arrow alignment in IE6, fixes #5932
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@12748 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/nihilo/Dialog.css
+++ b/themes/nihilo/Dialog.css
@@ -137,14 +137,14 @@
 }
 .dj_ie6 .nihilo .dijitTooltipAbove .dijitTooltipConnector {
 	background-image: url("images/tooltipConnectorDown.gif");
-	bottom: -3px;
+	bottom: -5px;
 }
 
 .nihilo .dijitTooltipLeft {
 	padding-right: 10px;
 }
 .dj_ie6 .nihilo .dijitTooltipLeft {
-	padding-right: 12px;
+	padding-left: 11px;
 }
 .nihilo .dijitTooltipLeft .dijitTooltipConnector {
 	/* the arrow piece for tooltips to the left of an element, bottom borders aligned */
